--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -13,6 +13,7 @@
         height: 40px;
         display: flex;
         align-items: center;
+        overflow: hidden;
 
         .menu-icon {
             margin-right: 28px;
