--- a/src/components/RecommendedVideos/RecommendedVideos.styles.scss
+++ b/src/components/RecommendedVideos/RecommendedVideos.styles.scss
@@ -1,12 +1,12 @@
 .recommended-videos {
     width: 100%;
-    height: 100vh;
+    height: fit-content;
     padding: 24px 0;
     margin-left: 72px;
     background-color: #f9f9f9;
 
     .recommended-videos-videos {
-        padding: 20px 40px;
+        padding: 20px 40px 0 40px;
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
