--- a/src/components/Sidebar/MicroSidebar/MicroSidebar.styles.scss
+++ b/src/components/Sidebar/MicroSidebar/MicroSidebar.styles.scss
@@ -2,5 +2,8 @@
     width: 80px;
     height: 100%;
     background-color: rgb(255, 255, 255);
-    position: fixed;
+    position: absolute;
+    padding-top: 16px;
+    left: 0;
+    top: 66px;
 }
